UIEXT-1725: Introduce WidgetTree as intermediate processing step
UIEXT-1725 (Introduce widget tree)